# squirrel-notifier

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  lefthook.yml  pyproject.toml
.github/: RELEASE_TEMPLATE.md  release-notes-v0.1.3.md
.github/workflows/: changelog-guard.yml  ci.yml  reapply-release-notes.yml  release-notes-test.yml  release.yml  update-release-v0.1.3.yml
docs/: CHANGELOG-archive.md  WINUI3_APP.md  auto-pause.md  future_tasks_proposals.md  launcher-agent-presets.md  live-log-window.md  manual-verification-2026-07-21.md  progress-event-contract.md  statusline-integration.md
docs/archive/: WINDOWS_LIGHTWEIGHT_APP.md
docs/samples/: agy-ratelimit-snippet.ps1  claude-code-ratelimit-snippet.sh  skill-progress-snippet.md
scripts/: README.md  create-cert.ps1  create-shortcuts.cmd  create-shortcuts.ps1  extract-release-notes.Tests.ps1  extract-release-notes.ps1  install.cmd  install.ps1  setup-dev.ps1  test-msi-major-upgrade.ps1  uninstall.cmd  uninstall.ps1
scripts/hooks/: README.md  pre-commit-build.ps1  pre-commit-checks.ps1  pre-commit-format.ps1  pre-commit-test.ps1
src/squirrel_notifier_devtools/: __init__.py
winui3/: Directory.Packages.props  SquirrelNotifier.WinUI3.sln
winui3/SquirrelNotifier.Installer/: Package.wxs  SquirrelNotifier.Installer.wixproj
winui3/SquirrelNotifier.WinUI3/: AgentExecutionWindow.xaml  AgentExecutionWindow.xaml.cs  App.xaml  App.xaml.cs  GatewayAuthDialog.xaml  GatewayAuthDialog.xaml.cs  MainWindow.xaml  (+6 more)
winui3/SquirrelNotifier.WinUI3.Tests/: SquirrelNotifier.WinUI3.Tests.csproj
(+147 files in other folders)
