[project]
name = "squirrel-notifier-devtools"
version = "0.0.0"
description = "Squirrel Notifier の開発用ツールセット（pre-commit など）"
requires-python = ">=3.14.2"
authors = [
    { name = "Squirrel Notifier Contributors" },
]
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/squirrel_notifier_devtools"]
